andamos con el relay en el medio
