# app/src/main/kotlin/ar/edu/austral/inf/sd/api/RelayApiController.kt
@@ -1,27 +1,11 @@
 package ar.edu.austral.inf.sd.api
 
-import org.springframework.http.HttpStatus
-import org.springframework.http.MediaType
-import org.springframework.http.ResponseEntity
-
-import org.springframework.web.bind.annotation.*
-import org.springframework.validation.annotation.Validated
-import org.springframework.web.context.request.NativeWebRequest
+import ar.edu.austral.inf.sd.model.Signature
 import org.springframework.beans.factory.annotation.Autowired
-
-import jakarta.validation.Valid
-import jakarta.validation.constraints.DecimalMax
-import jakarta.validation.constraints.DecimalMin
-import jakarta.validation.constraints.Email
-import jakarta.validation.constraints.Max
-import jakarta.validation.constraints.Min
-import jakarta.validation.constraints.NotNull
-import jakarta.validation.constraints.Pattern
-import jakarta.validation.constraints.Size
-import org.springframework.web.multipart.MultipartHttpServletRequest
-
-import kotlin.collections.List
-import kotlin.collections.Map
+import org.springframework.http.HttpStatus
+import org.springframework.http.ResponseEntity
+import org.springframework.validation.annotation.Validated
+import org.springframework.web.bind.annotation.*
 
 @RestController
 @Validated
@@ -37,9 +21,11 @@ class RelayApiController(@Autowired(required = true) val service: RelayApiServic
     )
     fun relayMessage(
         @RequestPart(value = "message", required = true) message: kotlin.String,
-        @RequestPart(value = "signature", required = false) signature: kotlin.String?,
-        multipartHttpServletRequest: MultipartHttpServletRequest,
-    ): ResponseEntity<kotlin.Any> {
-        return ResponseEntity(service.relayMessage(message, signature), HttpStatus.valueOf(202))
+        @RequestParam(
+            value = "signatures",
+            required = false
+        ) signatures: kotlin.collections.List<Signature>?
+    ): ResponseEntity<Signature> {
+        return ResponseEntity(service.relayMessage(message, signatures), HttpStatus.valueOf(202))
     }
 }
