# app/src/main/kotlin/ar/edu/austral/inf/sd/api/RelayApiService.kt
@@ -1,5 +1,6 @@
 package ar.edu.austral.inf.sd.api
 
+import ar.edu.austral.inf.sd.model.Signature
 
 interface RelayApiService {
 
@@ -8,9 +9,9 @@ interface RelayApiService {
      * Firma un mensaje y lo manda al siguiente
      *
      * @param message  (required)
-     * @param signature  (optional)
+     * @param signatures  (optional)
      * @return mensaje recibido y reenviado. (status code 202)
      * @see RelayApi#relayMessage
      */
-    fun relayMessage(message: kotlin.String, signature: kotlin.String?): kotlin.Any
+    fun relayMessage(message: kotlin.String, signatures: kotlin.collections.List<Signature>?): Signature
 }
